# Wound_Segmentation

./: .gitignore  AGENTS.md  README.md  make_finetune_split.py  pyproject.toml  requirements.txt  run.sh  vm_commands_segmentation.txt
app/backend/: main.py
configs/: baseline.yaml  evaluate.yaml  finetune.yaml  finetune_tkr.yaml  finetune_ulcer_boundary.yaml  finetune_wound.yaml  predict.yaml  run.yaml  tkr-finetune.yaml  train.yaml  wound-finetune.yaml
data_preprocess/: preprocess_split.py  preprocess_tkr.py  preprocess_wound.py  verify.py
inference/: predict.py
metrics/: __init__.py
scripts/: anylabeling_to_woundseg.py  convert_heic_to_jpg.py  debug_tkr_roi.py  download_public_wound.py  eval.py  evaluate.py  extract_tkr_roi.py  finetune.py  finetune_tkr.py  finetune_wound.py  predict.py  predict_single.py  rename_img.py  tkr_finetune.py  train.py  visualize.py
src/datasets/: __init__.py  transforms.py  wound_dataset.py
src/engine/: __init__.py  infer.py  trainer.py  validator.py
src/losses/: __init__.py  focal_tversky_loss.py
src/metrics/: __init__.py  dice.py  iou.py  precision.py  recall.py
src/models/: __init__.py
src/utils/: __init__.py  checkpoint.py  viz.py
tools/: convert_heic_to_jpg.py  create_roi_feasibility_demo.py  find_duplicates.py  make_finetune_split.py  rename_images.py  review_duplicates.py
tools/preprocess/: convert_new_annotations_to_masks.py  integrate_new_raw_datasets.py  prepare_chronic_wound_sources.py  preprocess_split.py  (+5 more)
train/: train_unet.py
utils/: checkpoint.py
woundseg/: __init__.py  config.py  postprocess.py
(+42 files in other folders)
